@@ -103,10 +103,14 @@ noinst_PROGRAMS = testlib
 testlib_SOURCES = testlib.cpp
 
 if ICU
-testlib_LDADD = -L./lib -lsword -licui18n -licuuc
-else
-testlib_LDADD = -L./lib -lsword
+iculibs = -licui18n -licuuc
 endif
+
+if USELUCENE
+lucenelibs = -lclucene
+endif
+
+testlib_LDADD = -L./lib -lsword $(iculibs) $(lucenelibs)
 
 include locales.d/Makefile.am
 include samples/Makefile.am
